<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_root"
    android:background="@color/app_background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/word_card_ripple_bg"
            android:clickable="true"
            android:elevation="15dp"
            android:focusable="true"
            android:onClick="repeatPlay"
            android:orientation="vertical">

            <ProgressBar
                android:max="100"
                android:id="@+id/progressBarHorizontal"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_height="2dp" />

            <TextView
                android:id="@+id/current_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:text="@string/hello"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/current_chinese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:text="@string/world"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="40dp"
                android:text="@string/choose_a_part"
                android:textAppearance="@android:style/TextAppearance" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:background="@android:color/darker_gray" />

        <android.support.constraint.ConstraintLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@drawable/ripple_bg"
                android:text="@string/previous"
                android:onClick="previous"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/next" />

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ripple_bg"
                android:text="@string/next"
                android:onClick="next"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintLeft_toRightOf="@+id/previous"
                app:layout_constraintRight_toLeftOf="@id/speech" />

            <Button
                android:id="@+id/speech"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/ripple_bg"
                android:text="@string/begin"
                android:onClick="speech"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintLeft_toRightOf="@+id/next"
                app:layout_constraintRight_toRightOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:background="@android:color/darker_gray" />

        <ScrollView
            android:layout_margin="10dp"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/allWords"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </ScrollView>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_dialog_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>
</RelativeLayout>